--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "deploy": "npm run build && gh-pages -d build"
     },
     "dependencies": {
         "next": "11.1.2",
@@ -17,6 +18,7 @@
         "autoprefixer": "^10.3.4",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.2",
+        "gh-pages": "^3.2.3",
         "postcss": "^8.3.6",
         "tailwindcss": "^2.2.15"
     },
