--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "next build && next export",
         "start": "next start",
         "lint": "next lint",
-        "deploy": "npm run build && gh-pages -d out"
+        "deploy": "npm run build && gh-pages -d out -t"
     },
     "dependencies": {
         "next": "11.1.2",
