--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
     "name": "5cups",
-    "version": "0.1.0",
+    "version": "2.0.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build && next export",
-        "start": "next start",
-        "lint": "next lint",
+        "dev": "vite",
+        "build": "vite build",
+        "start": "vite serve",
         "deploy": "npm run build && gh-pages -d out -t"
     },
     "dependencies": {
+        "@prefresh/vite": "^2.2.3",
         "@reach/slider": "^0.16.0",
-        "next": "11.1.2",
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "preact": "^10.5.15",
+        "vite": "^2.6.11"
     },
     "devDependencies": {
         "autoprefixer": "^10.3.7",
-        "eslint": "7.32.0",
-        "eslint-config-next": "11.1.2",
         "gh-pages": "^3.2.3",
         "postcss": "^8.3.10",
         "tailwindcss": "^2.2.17"
